<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/button_share"
        android:layout_width="218dp"
        android:layout_height="92dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/teal"
        android:text="@string/share_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/cream"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_browse" />

    <Button
        android:id="@+id/button_browse"
        android:layout_width="218dp"
        android:layout_height="92dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/teal"
        android:fontFamily="sans-serif"
        android:text="@string/browse_button_text"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/cream"
        android:typeface="normal"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_create" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="218dp"
        android:layout_height="92dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/teal"
        android:fontFamily="sans-serif"
        android:text="@string/create_button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/cream"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@id/button_browse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47000003"
        app:rippleColor="#2196F3"
        app:strokeColor="#2196F3" />

</androidx.constraintlayout.widget.ConstraintLayout>